--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Build acnilbot
+      run: go build -v cmd/acnilbot/main.go
 
-    - name: Test
+    - name: Test all
       run: go test -v ./...
