Implement lambda deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-secret.json
-.env
-deploy/*
-credentials.prod.json
-credentials.json
-bin/*
-.gitsecret/keys/random_seed
-!*.secret
+/secret.json
+/.env
+/deploy/*
+/credentials.prod.json
+/credentials.json
+/bin/*
+/.gitsecret/keys/random_seed
+/!*.secret
+
+/tf/builds/
+/lambda/
+
+bootstrap
