--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -13,9 +13,6 @@ jobs:
   terraform:
     name: Plan / Apply
     runs-on: ubuntu-20.04
-    defaults:
-      run:
-        working-directory: tf
     permissions:
       contents: read
       pull-requests: write
@@ -35,18 +32,18 @@ jobs:
 
     - name: Terraform Init
       id: init
-      run: terraform  init
+      run: terraform -chdir=./tf init
       continue-on-error: true
 
     - name: Terraform Validate
       id: validate
-      run: terraform  validate -no-color
+      run: terraform -chdir=./tf validate -no-color
       continue-on-error: true
 
     - name: Terraform Plan
       id: plan
       if: github.event_name == 'pull_request'
-      run: terraform  plan -no-color -input=false
+      run: ./plan.sh
       continue-on-error: true
 
     - name: Terraform Status
@@ -55,4 +52,4 @@ jobs:
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: terraform  apply -auto-approve -input=false
+      run: ./apply.sh
