--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,9 +1,8 @@
 name: Terraform
 
 on:
-  push:
-    branches:
-      - master
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
