--- a/.github/workflows/terraform_destroy.yaml
+++ b/.github/workflows/terraform_destroy.yaml
@@ -24,10 +24,15 @@ jobs:
       with:
         terraform_version: 1.5.7
 
+
     - name: Terraform Init
       id: init
       run: terraform -chdir=./tf init
       continue-on-error: true
+
+    - name: Terraform Workspace
+      id: workspace
+      run: terraform -chdir=./tf workspace select production
 
     - name: Terraform Apply
       run: ./tf/destroy.sh
