--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -34,6 +34,10 @@ jobs:
       run: terraform -chdir=./tf init
       continue-on-error: true
 
+    - name: Terraform Workspace
+      id: workspace
+      run: terraform -chdir=./tf workspace select production
+
     - name: Terraform Validate
       id: validate
       run: terraform -chdir=./tf validate -no-color
