--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -61,6 +61,11 @@ jobs:
       run: ./tf/plan.sh
       continue-on-error: true
 
+    - name: Debug
+      id: debug
+      run: echo $TOKEN
+      continue-on-error: true
+
     - name: Terraform Status
       if: steps.plan.outcome == 'failure' || steps.validate.outcome == 'failure' || steps.init.outcome == 'failure' || steps.fmt.outcome == 'failure'
       run: exit 1
