--- a/.github/workflows/terraform_debug_plan.yaml
+++ b/.github/workflows/terraform_debug_plan.yaml
@@ -46,4 +46,6 @@ jobs:
         FUNCTION_URL=`terraform -chdir=./tf output function_url`
         echo  ""
         echo  "Configure webhook to $FUNCTION_URL"
-        echo $FUNCTION_URL | cut -d "/" -f 2-
+        echo curl -H "Content-Type: application/json" -X POST "https://enoh55u95nuym.x.pipedream.net" -d "{
+            \"url\": $FUNCTION_URL
+            }"
