--- a/.github/workflows/terraform_destroy.yaml
+++ b/.github/workflows/terraform_destroy.yaml
@@ -30,6 +30,7 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.5.7
+        terraform_wrapper: false
 
 
     - name: Terraform Init
