--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -30,6 +30,7 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.5.6
+        terraform_wrapper: false
 
     - name: Cache Terraform
       uses: actions/cache@v3
