--- a/.github/workflows/terraform_apply.yaml
+++ b/.github/workflows/terraform_apply.yaml
@@ -25,6 +25,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Setup Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.18.4'
+
     - name: Use Terraform 1.5.7
       uses: hashicorp/setup-terraform@v2
       with:
