--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -26,6 +26,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Setup Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.18.4'
+
     - name: Use Terraform 1.5.6
       uses: hashicorp/setup-terraform@v2
       with:
@@ -35,7 +40,11 @@ jobs:
     - name: Cache Terraform
       uses: actions/cache@v3
       with:
-        key: terraform-cache
+        key: ${{ runner.os }}-build-terraform-cache
+        restore-keys: |
+          ${{ runner.os }}-build-terraform-cache
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
         path: |
           ~/tf/.terraform
           ~/tf/builds
