change cache path

--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -46,8 +46,8 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
         path: |
-          ~/tf/.terraform
-          ~/tf/builds
+          ./tf/.terraform
+          ./tf/builds
 
     - name: Terraform Format
       id: fmt
