--- a/.github/workflows/terraform_apply.yaml
+++ b/.github/workflows/terraform_apply.yaml
@@ -36,6 +36,18 @@ jobs:
         terraform_version: 1.5.7
         terraform_wrapper: false
 
+    - name: Cache Terraform
+      uses: actions/cache@v3
+      with:
+        key: ${{ runner.os }}-build-terraform-cache
+        restore-keys: |
+          ${{ runner.os }}-build-terraform-cache
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+        path: |
+          ./tf/.terraform
+          ./tf/builds
+
     - name: Terraform Init
       id: init
       run: terraform -chdir=./tf init
