try to make build consistent

--- a/.github/workflows/terraform_apply.yaml
+++ b/.github/workflows/terraform_apply.yaml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   terraform:
-    name: Plan / Apply
+    name: Apply
     runs-on: ubuntu-20.04
     permissions:
       contents: read
