--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -66,5 +66,6 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: ./tf/plan.sh
+      run: |
+        ./tf/plan.sh >> $GITHUB_STEP_SUMMARY
 
