--- a/.github/workflows/terraform_apply.yaml
+++ b/.github/workflows/terraform_apply.yaml
@@ -55,6 +55,8 @@ jobs:
     - name: Terraform Workspace
       id: workspace
       run: terraform -chdir=./tf workspace select production
+    - name: Debug
+      run: echo $WEBHOOK_SECRET_TOKEN
 
     - name: Terraform Apply
       run: ./tf/apply.sh
