--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,19 +10,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
-
-    - name: Build acnilbot
-      run: go build -v cmd/acnilbot/main.go
-
-    - name: Test all
-      run: go test -v ./...
+    - uses: ./.github/actions/jobs/build 
