--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,4 +13,4 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: ./.github/actions/jobs/build 
+    - uses: ./.github/actions/build 
