--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,4 +13,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+    - name: Check out repository
+      uses: actions/checkout@v4   
     - uses: ./.github/actions/build 
