--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,17 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
     - name: Check out repository
       uses: actions/checkout@v4   
-    - uses: ./.github/actions/build
+    - name: Build binaries
+      uses: ./.github/actions/build
+
+    - uses: ./.github/actions/terraform
+      if: "contains(github.event.head_commit.message,'tf:plan')"
+
+    - name: Terraform Apply
+      if: "contains(github.event.head_commit.message,'tf:plan')"
+      run: ./tf/apply.sh
