--- a/.github/workflows/terraform_apply.yaml
+++ b/.github/workflows/terraform_apply.yaml
@@ -26,35 +26,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Setup Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.18.4'
-
-    - name: Use Terraform 1.5.7
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.5.7
-        terraform_wrapper: false
-
-    - name: Cache Terraform
-      uses: actions/cache@v3
-      with:
-        key: ${{ runner.os }}-build-terraform-cache
-        restore-keys: |
-          ${{ runner.os }}-build-terraform-cache
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
-        path: |
-          ./tf/.terraform
-
-    - name: Terraform Init
-      id: init
-      run: terraform -chdir=./tf init
-
-    - name: Terraform Workspace
-      id: workspace
-      run: terraform -chdir=./tf workspace select production
+    - uses: ./.github/actions/terraform
 
     - name: Terraform Apply
       run: ./tf/apply.sh
