--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,9 +20,7 @@ jobs:
     - name: Build binaries
       uses: ./.github/actions/build
 
-    - uses: ./.github/actions/terraform
-      if: "contains(github.event.head_commit.message,'tf:plan')"
-
     - name: Terraform Apply
-      if: "contains(github.event.head_commit.message,'tf:plan')"
-      run: ./tf/apply.sh
+      if: "contains(github.event.head_commit.message,'tf:apply')"
+      uses: ./.github/actions/apply
+
