--- a/.github/actions/apply/action.yaml
+++ b/.github/actions/apply/action.yaml
@@ -3,32 +3,8 @@ description: "Apply terraform changes"
 runs:
   using: composite
   steps:
-    - name: Use Terraform 1.5.7
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.5.7
-        terraform_wrapper: false
-
-    - name: Cache Terraform
-      uses: actions/cache@v3
-      with:
-        key: ${{ runner.os }}-build-terraform-cache
-        restore-keys: |
-          ${{ runner.os }}-build-terraform-cache
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
-        path: |
-          ./tf/.terraform
-
-    - name: Terraform Init
-      shell: bash
-      id: init
-      run: terraform -chdir=./tf init
-
-    - name: Terraform Workspace
-      shell: bash
-      id: workspace
-      run: terraform -chdir=./tf workspace select production
+    - name: Prepare terraform
+      uses: ./.github/actions/terraform
 
     - name: Terraform Apply
       shell: bash
