--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,18 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  AUDIT_SHEET_ID: ${{ secrets.AUDIT_SHEET_ID }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  SHEETS_EMAIL: ${{ secrets.SHEETS_EMAIL }}
+  SHEETS_PRIVATE_KEY: ${{ secrets.SHEETS_PRIVATE_KEY }}
+  SHEETS_PRIVATE_KEY_ID: ${{ secrets.SHEETS_PRIVATE_KEY_ID }}
+  SHEET_ID: ${{ secrets.SHEET_ID }}
+  TOKEN: ${{ secrets.TOKEN }}
+  WEBHOOK_SECRET_TOKEN: ${{ secrets.WEBHOOK_SECRET_TOKEN }}
+
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -23,4 +35,3 @@ jobs:
     - name: Terraform Apply
       if: "contains(github.event.head_commit.message,'tf:apply')"
       uses: ./.github/actions/apply
-
