--- a/.github/actions/terraform/action.yaml
+++ b/.github/actions/terraform/action.yaml
@@ -1,17 +1,15 @@
 name: Terraform
 description: "Performs common actions for terraform"
 runs:
-  using: "composite"
+  using: composite
   steps:
     - name: Use Terraform 1.5.7
-      shell: bash
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.5.7
         terraform_wrapper: false
 
     - name: Cache Terraform
-      shell: bash
       uses: actions/cache@v3
       with:
         key: ${{ runner.os }}-build-terraform-cache
