--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,3 +35,7 @@ jobs:
     - name: Terraform Apply
       if: "contains(github.event.head_commit.message,'tf:apply')"
       uses: ./.github/actions/apply
+
+    - name: Terraform Plan
+      if: "contains(github.event.head_commit.message,'tf:plan')"
+      uses: ./.github/actions/plan
