play with actions tf:plan

--- a/.github/actions/plan/action.yaml
+++ b/.github/actions/plan/action.yaml
@@ -22,6 +22,6 @@ runs:
         <details><summary>Show Plan</summary>
 
         \`\`\`\n
-        ${ steps.plan.outputs.stdout }
+        ${{ steps.plan.outputs.stdout }}
         \`\`\`
         </details>` >> GITHUB_STEP_SUMMARY
