--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: CI/CD
 
 on:
   push:
@@ -29,6 +29,7 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v4   
+
     - name: Build binaries
       uses: ./.github/actions/build
 
@@ -39,3 +40,7 @@ jobs:
     - name: Terraform Plan
       if: "contains(github.event.head_commit.message,'tf:plan')"
       uses: ./.github/actions/plan
+
+    - name: Terraform Delete
+      if: "contains(github.event.head_commit.message,'tf:delete')"
+      uses: ./.github/actions/delete
