--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,8 +6,6 @@ name: CI/CD
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 env:
   AUDIT_SHEET_ID: ${{ secrets.AUDIT_SHEET_ID }}
@@ -24,6 +22,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: production
     permissions:
       contents: read
     steps:
