--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,5 +24,18 @@
                 "TestAcnil"
             ]
         },
+        {
+            "name": "Launch BGG",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${workspaceFolder}/cmd/bgg/main.go",
+            "args": [
+                "manual",
+                "--refresh"
+            ],
+            "cwd": "${workspaceFolder}",
+            "envFile": "${workspaceFolder}/env/production.env"
+        },
     ]
 }
