tf:apply add structure to state

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}/cmd/acnilbot/main.go",
-            "envFile": "${workspaceFolder}/.env",
+            "envFile": "${workspaceFolder}/env/development.env",
             "cwd": "${workspaceFolder}"
         },
         {
